--- a/plugins/roar/src/main/resources/i18n/roar_i18n_fr.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_fr.properties
@@ -1,12 +1,12 @@
 # Roar language file
 
-roar.settings = Paramètres Roar
-roar.enabled = Popups activés
-roar.duration = Durée en ms (0 = infini):
-roar.amount = Popups maximals affichés à l'écran (0 = infini):
-roar.location = Changer l'emplacement de départ du popup (nécessite un redémarrage)
-roar.display.topright = En haut à droite
-roar.display.bottomright = En bas à droite
+roar.settings = Param\u00e8tres Roar
+roar.enabled = Popups activ\u00e9s
+roar.duration = Dur\u00e9e en ms (0 = infini):
+roar.amount = Popups maximals affich\u00e9s \u00e0 l'\u00e9cran (0 = infini):
+roar.location = Changer l'emplacement de d\u00e9part du popup (n\u00e9cessite un red\u00e9marrage)
+roar.display.topright = En haut \u00e0 droite
+roar.display.bottomright = En bas \u00e0 droite
 roar.background = Couleur de fond
-roar.header = Couleur de l'entête
+roar.header = Couleur de l'ent\u00eate
 roar.text = Couleur du texte
