--- a/plugins/roar/src/main/resources/i18n/roar_i18n_lt.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_lt.properties
@@ -1,36 +1,35 @@
-
 # Roar language file
 
 roar.settings = Roar Nustatymai
-roar.enabled = Įjungti iššokančius langus
-roar.duration = Rodymo trukmė (ms) (0 = neribojama):
-roar.amount = Maksimalus langų skaičius ekrane (0 = neribojama):
-roar.location = Pakeisti langų atsiradymo pradžios vietą (reikalingas perkrovimas)
-roar.display.topright = Viršuje dešinėje
-roar.display.bottomright = Apačioje dešinėje
+roar.enabled = \u012ejungti i\u0161\u0161okan\u010dius langus
+roar.duration = Rodymo trukm\u0117 (ms) (0 = neribojama):
+roar.amount = Maksimalus lang\u0173 skai\u010dius ekrane (0 = neribojama):
+roar.location = Pakeisti lang\u0173 atsiradymo prad\u017eios viet\u0105 (reikalingas perkrovimas)
+roar.display.topright = Vir\u0161uje de\u0161in\u0117je
+roar.display.bottomright = Apa\u010dioje de\u0161in\u0117je
 roar.background = Fono spalva
 roar.background.group = Fono spalva grupiniam pokalbiui
-roar.background.keyword = Fono spalva raktiniam žodžiui
-roar.header = Antraštės spalva
-roar.header.group = Antraštės spalva grupiniam pokalbiui
-roar.header.keyword = Antraštės spalva raktiniam žodžiui
+roar.background.keyword = Fono spalva raktiniam \u017eod\u017eiui
+roar.header = Antra\u0161t\u0117s spalva
+roar.header.group = Antra\u0161t\u0117s spalva grupiniam pokalbiui
+roar.header.keyword = Antra\u0161t\u0117s spalva raktiniam \u017eod\u017eiui
 roar.text = Teksto spalva
 roar.text.group = Teksto spalva grupiniam pokalbiui
-roar.text.keyword = Teksto spalva raktiniam žodžiui
+roar.text.keyword = Teksto spalva raktiniam \u017eod\u017eiui
 
 roar.single = Paprastas pokalbis
-roar.single.disable = Išjungti Roar paprastuose pokalbiuose (su vienu adresatu)
+roar.single.disable = I\u0161jungti Roar paprastuose pokalbiuose (su vienu adresatu)
 roar.group = Grupinis pokalbis
 roar.group.different = Naudoti skirtingus nustatymus grupiniuose pokalbiuose
-roar.group.disable = išjungti Roar grupiniuose pokalbiuose
-roar.keyword = Raktinis žodis
-roar.keyword.different = Naudoti skirtingus nustatymus raktiniam žodžiui
-roar.keyword.keyword = Raktiniai žodžiai (atskirti kalbleliu)
+roar.group.disable = i\u0161jungti Roar grupiniuose pokalbiuose
+roar.keyword = Raktinis \u017eodis
+roar.keyword.different = Naudoti skirtingus nustatymus raktiniam \u017eod\u017eiui
+roar.keyword.keyword = Raktiniai \u017eod\u017eiai (atskirti kalbleliu)
 
-roar.display.system = Operacinės sistemos pranešimas
+roar.display.system = Operacin\u0117s sistemos prane\u0161imas
 
-roar.warning.topright = Roar pranešimo stilius. Viskas koreguojama.
-roar.warning.bottomright = Roar pranešimo stilius. Viskas koreguojama.
-roar.warning.toaster = Spark pranešimo stilius. Spalvų <u>negalima</u> pakeisti.
-roar.warning.system = Sisteminis pranešimo stilius. Spalvų ir rodymo trukmės <u>negalima</u> pakeisti.
-roar.warning.system.mac = Naudojamas Notification-Center (OSX 10.8 ir naujesnės).<br>Spalvų ir rodymo trukmės <u>negalima</u> pakeisti.<br>Papildomų nustatymų ieškoti Mac-Systemsettings -&gt; Notifications.
+roar.warning.topright = Roar prane\u0161imo stilius. Viskas koreguojama.
+roar.warning.bottomright = Roar prane\u0161imo stilius. Viskas koreguojama.
+roar.warning.toaster = Spark prane\u0161imo stilius. Spalv\u0173 <u>negalima</u> pakeisti.
+roar.warning.system = Sisteminis prane\u0161imo stilius. Spalv\u0173 ir rodymo trukm\u0117s <u>negalima</u> pakeisti.
+roar.warning.system.mac = Naudojamas Notification-Center (OSX 10.8 ir naujesn\u0117s).<br>Spalv\u0173 ir rodymo trukm\u0117s <u>negalima</u> pakeisti.<br>Papildom\u0173 nustatym\u0173 ie\u0161koti Mac-Systemsettings -&gt; Notifications.
