--- a/plugins/roar/src/main/resources/i18n/roar_i18n_ru_RU.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_ru_RU.properties
@@ -1,36 +1,36 @@
 
 # Roar language file
 
-roar.settings = Настройки Roar
-roar.enabled = Всплывающие окна включены
-roar.duration = Продолжительность в мс (0 = бесконечно):
-roar.amount = Максимальное кол-во всп. окон на экране (0 = бесконечно):
-roar.location = Местоположение всп.окна (требуется перезагрузка)
-roar.display.topright = Правый верхнем
-roar.display.bottomright = Нижний правый
-roar.background = Фоновый цвет
-roar.background.group = Цвет фона для многопользовательских чатов
-roar.background.keyword = Ключевой цвет фона
-roar.header = Цвет заголовка
-roar.header.group = Цвет заголовка для многопользовательских чатов
-roar.header.keyword = Ключевой цвет заголовка
-roar.text = Цвет текста
-roar.text.group = Цвет текста для многопользовательских чатов
-roar.text.keyword = Ключевой цвета текста
+roar.settings = \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 Roar
+roar.enabled = \u0412\u0441\u043f\u043b\u044b\u0432\u0430\u044e\u0449\u0438\u0435 \u043e\u043a\u043d\u0430 \u0432\u043a\u043b\u044e\u0447\u0435\u043d\u044b
+roar.duration = \u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u044c \u0432 \u043c\u0441 (0 = \u0431\u0435\u0441\u043a\u043e\u043d\u0435\u0447\u043d\u043e):
+roar.amount = \u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u043e\u0435 \u043a\u043e\u043b-\u0432\u043e \u0432\u0441\u043f. \u043e\u043a\u043e\u043d \u043d\u0430 \u044d\u043a\u0440\u0430\u043d\u0435 (0 = \u0431\u0435\u0441\u043a\u043e\u043d\u0435\u0447\u043d\u043e):
+roar.location = \u041c\u0435\u0441\u0442\u043e\u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u0432\u0441\u043f.\u043e\u043a\u043d\u0430 (\u0442\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044f \u043f\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0430)
+roar.display.topright = \u041f\u0440\u0430\u0432\u044b\u0439 \u0432\u0435\u0440\u0445\u043d\u0435\u043c
+roar.display.bottomright = \u041d\u0438\u0436\u043d\u0438\u0439 \u043f\u0440\u0430\u0432\u044b\u0439
+roar.background = \u0424\u043e\u043d\u043e\u0432\u044b\u0439 \u0446\u0432\u0435\u0442
+roar.background.group = \u0426\u0432\u0435\u0442 \u0444\u043e\u043d\u0430 \u0434\u043b\u044f \u043c\u043d\u043e\u0433\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0447\u0430\u0442\u043e\u0432
+roar.background.keyword = \u041a\u043b\u044e\u0447\u0435\u0432\u043e\u0439 \u0446\u0432\u0435\u0442 \u0444\u043e\u043d\u0430
+roar.header = \u0426\u0432\u0435\u0442 \u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043a\u0430
+roar.header.group = \u0426\u0432\u0435\u0442 \u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043a\u0430 \u0434\u043b\u044f \u043c\u043d\u043e\u0433\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0447\u0430\u0442\u043e\u0432
+roar.header.keyword = \u041a\u043b\u044e\u0447\u0435\u0432\u043e\u0439 \u0446\u0432\u0435\u0442 \u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043a\u0430
+roar.text = \u0426\u0432\u0435\u0442 \u0442\u0435\u043a\u0441\u0442\u0430
+roar.text.group = \u0426\u0432\u0435\u0442 \u0442\u0435\u043a\u0441\u0442\u0430 \u0434\u043b\u044f \u043c\u043d\u043e\u0433\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0447\u0430\u0442\u043e\u0432
+roar.text.keyword = \u041a\u043b\u044e\u0447\u0435\u0432\u043e\u0439 \u0446\u0432\u0435\u0442\u0430 \u0442\u0435\u043a\u0441\u0442\u0430
 
-roar.single = Один пользователь
-roar.single.disable = Отключить Roar для однопользовательских чатов
-roar.group = Многопользовательский чат
-roar.group.different = Использовать разные настройки для многопользовательских чатов
-roar.group.disable = Отключить Roar для многопользовательских чатов
-roar.keyword = Ключевые соответствия
-roar.keyword.different = Использовать разные настройки для ключевых соответствия 
-roar.keyword.keyword = Ключевые слова (через запятую)
+roar.single = \u041e\u0434\u0438\u043d \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c
+roar.single.disable = \u041e\u0442\u043a\u043b\u044e\u0447\u0438\u0442\u044c Roar \u0434\u043b\u044f \u043e\u0434\u043d\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0447\u0430\u0442\u043e\u0432
+roar.group = \u041c\u043d\u043e\u0433\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0439 \u0447\u0430\u0442
+roar.group.different = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0440\u0430\u0437\u043d\u044b\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u0434\u043b\u044f \u043c\u043d\u043e\u0433\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0447\u0430\u0442\u043e\u0432
+roar.group.disable = \u041e\u0442\u043a\u043b\u044e\u0447\u0438\u0442\u044c Roar \u0434\u043b\u044f \u043c\u043d\u043e\u0433\u043e\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0445 \u0447\u0430\u0442\u043e\u0432
+roar.keyword = \u041a\u043b\u044e\u0447\u0435\u0432\u044b\u0435 \u0441\u043e\u043e\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0438\u044f
+roar.keyword.different = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0440\u0430\u0437\u043d\u044b\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u0434\u043b\u044f \u043a\u043b\u044e\u0447\u0435\u0432\u044b\u0445 \u0441\u043e\u043e\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0438\u044f 
+roar.keyword.keyword = \u041a\u043b\u044e\u0447\u0435\u0432\u044b\u0435 \u0441\u043b\u043e\u0432\u0430 (\u0447\u0435\u0440\u0435\u0437 \u0437\u0430\u043f\u044f\u0442\u0443\u044e)
 
-roar.display.system = Уведомления операционной системы
+roar.display.system = \u0423\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f \u043e\u043f\u0435\u0440\u0430\u0446\u0438\u043e\u043d\u043d\u043e\u0439 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
 
-roar.warning.topright = Пользовательский стиль уведомления Roar
-roar.warning.bottomright = Пользовательский стиль уведомления Roar
-roar.warning.toaster = Стиль уведомления Spark. Цвета <u>НЕ</u> настраиваются.
-roar.warning.system = Уведомления от операционной системы, цвета и продолжительность <u>НЕ</u> настраиваются.
-roar.warning.system.mac = Использует Центр уведомлений (OS X 10.8 и выше).<br>Цвета и продолжительность <u>НЕ</u> настраиваются.<br>См. "Системные настройки Mac" -&gt; Уведомления для дополнительных настроек.
+roar.warning.topright = \u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0439 \u0441\u0442\u0438\u043b\u044c \u0443\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f Roar
+roar.warning.bottomright = \u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0439 \u0441\u0442\u0438\u043b\u044c \u0443\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f Roar
+roar.warning.toaster = \u0421\u0442\u0438\u043b\u044c \u0443\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f Spark. \u0426\u0432\u0435\u0442\u0430 <u>\u041d\u0415</u> \u043d\u0430\u0441\u0442\u0440\u0430\u0438\u0432\u0430\u044e\u0442\u0441\u044f.
+roar.warning.system = \u0423\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f \u043e\u0442 \u043e\u043f\u0435\u0440\u0430\u0446\u0438\u043e\u043d\u043d\u043e\u0439 \u0441\u0438\u0441\u0442\u0435\u043c\u044b, \u0446\u0432\u0435\u0442\u0430 \u0438 \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u044c <u>\u041d\u0415</u> \u043d\u0430\u0441\u0442\u0440\u0430\u0438\u0432\u0430\u044e\u0442\u0441\u044f.
+roar.warning.system.mac = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u0442 \u0426\u0435\u043d\u0442\u0440 \u0443\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u0439 (OS X 10.8 \u0438 \u0432\u044b\u0448\u0435).<br>\u0426\u0432\u0435\u0442\u0430 \u0438 \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u044c <u>\u041d\u0415</u> \u043d\u0430\u0441\u0442\u0440\u0430\u0438\u0432\u0430\u044e\u0442\u0441\u044f.<br>\u0421\u043c. "\u0421\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 Mac" -&gt; \u0423\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f \u0434\u043b\u044f \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0445 \u043d\u0430\u0441\u0442\u0440\u043e\u0435\u043a.
