--- a/plugins/roar/src/main/resources/i18n/roar_i18n_zh_TW.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_zh_TW.properties
@@ -1,12 +1,11 @@
-
 # Roar language file
-roar.settings = 便利貼設定
-roar.enabled = 啟動彈出便利貼
-roar.duration = 便利貼顯示時間為多少毫秒 (0 = 無限時):
-roar.amount = 便利貼彈出在螢幕上的最大範圍 (0 = 無限時):
-roar.location = 變更便利貼彈出位置 (需要重新啟動)
-roar.display.topright = 右上方
-roar.display.bottomright = 右下方
-roar.background = 便利貼背景顏色
-roar.header = 便利貼標題顏色
-roar.text = 便利貼訊息顏色
+roar.settings = \u4fbf\u5229\u8cbc\u8a2d\u5b9a
+roar.enabled = \u555f\u52d5\u5f48\u51fa\u4fbf\u5229\u8cbc
+roar.duration = \u4fbf\u5229\u8cbc\u986f\u793a\u6642\u9593\u70ba\u591a\u5c11\u6beb\u79d2 (0 = \u7121\u9650\u6642):
+roar.amount = \u4fbf\u5229\u8cbc\u5f48\u51fa\u5728\u87a2\u5e55\u4e0a\u7684\u6700\u5927\u7bc4\u570d (0 = \u7121\u9650\u6642):
+roar.location = \u8b8a\u66f4\u4fbf\u5229\u8cbc\u5f48\u51fa\u4f4d\u7f6e (\u9700\u8981\u91cd\u65b0\u555f\u52d5)
+roar.display.topright = \u53f3\u4e0a\u65b9
+roar.display.bottomright = \u53f3\u4e0b\u65b9
+roar.background = \u4fbf\u5229\u8cbc\u80cc\u666f\u984f\u8272
+roar.header = \u4fbf\u5229\u8cbc\u6a19\u984c\u984f\u8272
+roar.text = \u4fbf\u5229\u8cbc\u8a0a\u606f\u984f\u8272
