--- a/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_lt.properties
+++ b/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_lt.properties
@@ -3,14 +3,14 @@
 #    by wolf.posdorfer    #
 ###########################
 
-ttt.game.request = {0} užklausė Kryžiukai-nuliukai žaidimo
-ttt.game.name = Kryžiukai-nuliukai
-ttt.window.title = {0} prieš {1}
-ttt.win = Sveikiname, jūs laimėjote!
-ttt.lose = Apgailėstaujame, jūs pralaimėjote!
-ttt.tie = Žaidimas baigėsi lygiosiomis.
-ttt.display.me = Aš esu:
-ttt.display.current = šiuo metu žaidžia:
-ttt.request.decline = Žaidimas prašymas buvo atmestas.
-ttt.request.accept = Žaidimas prasideda.
-ttt.request.sent = Siunčiama žaidimo užklausa...
+ttt.game.request = {0} u\u017eklaus\u0117 Kry\u017eiukai-nuliukai \u017eaidimo
+ttt.game.name = Kry\u017eiukai-nuliukai
+ttt.window.title = {0} prie\u0161 {1}
+ttt.win = Sveikiname, j\u016bs laim\u0117jote!
+ttt.lose = Apgail\u0117staujame, j\u016bs pralaim\u0117jote!
+ttt.tie = \u017daidimas baig\u0117si lygiosiomis.
+ttt.display.me = A\u0161 esu:
+ttt.display.current = \u0161iuo metu \u017eaid\u017eia:
+ttt.request.decline = \u017daidimas pra\u0161ymas buvo atmestas.
+ttt.request.accept = \u017daidimas prasideda.
+ttt.request.sent = Siun\u010diama \u017eaidimo u\u017eklausa...
