--- a/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_pt.properties
+++ b/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_pt.properties
@@ -3,14 +3,14 @@
 #    by wolf.posdorfer    #
 ###########################
 
-ttt.game.request = {0} está solicitando um jogo de
+ttt.game.request = {0} est\u00e1 solicitando um jogo de
 ttt.game.name = Tic Tac Toe e condenacao
 ttt.window.title = {0} versus {1}
-ttt.win = Parabéns, você ganhou!
-ttt.lose = Desculpe, você perdeu!
+ttt.win = Parab\u00e9ns, voc\u00ea ganhou!
+ttt.lose = Desculpe, voc\u00ea perdeu!
 ttt.tie = O jogo terminou em um empate.
 ttt.display.me = I am:
 ttt.display.current = a jogar agora:
 ttt.request.decline = O pedido foi negado jogo.
-ttt.request.accept = O jogo está comecando.
+ttt.request.accept = O jogo est\u00e1 comecando.
 ttt.request.sent = Enviando pedido jogo ...
