--- a/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_ru_RU.properties
+++ b/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_ru_RU.properties
@@ -3,14 +3,15 @@
 #    by wolf.posdorfer    #
 ###########################
 
-ttt.game.request = {0} запрашивает игру
-ttt.game.name = Крестики-нолики судьбы
-ttt.window.title = {0} против {1}
-ttt.win = Поздравляю, вы победили!
-ttt.lose = Прости, ты проиграл!
-ttt.tie = Игра закончилась вничью.
-ttt.display.me = Я:
-ttt.display.current = в настоящее время играет:
-ttt.request.decline = Запрос на игру был отклонен.
-ttt.request.accept = Игра начинается.
-ttt.request.sent = Отправка запроса на игру...
+ttt.game.request = {0} \u0437\u0430\u043f\u0440\u0430\u0448\u0438\u0432\u0430\u0435\u0442 \u0438\u0433\u0440\u0443
+ttt.game.name = \u041a\u0440\u0435\u0441\u0442\u0438\u043a\u0438-\u043d\u043e\u043b\u0438\u043a\u0438 \u0441\u0443\u0434\u044c\u0431\u044b
+ttt.window.title = {0} \u043f\u0440\u043e\u0442\u0438\u0432 {1}
+ttt.win = \u041f\u043e\u0437\u0434\u0440\u0430\u0432\u043b\u044f\u044e, \u0432\u044b \u043f\u043e\u0431\u0435\u0434\u0438\u043b\u0438!
+ttt.lose = \u041f\u0440\u043e\u0441\u0442\u0438, \u0442\u044b \u043f\u0440\u043e\u0438\u0433\u0440\u0430\u043b!
+ttt.tie = \u0418\u0433\u0440\u0430 \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u0430\u0441\u044c \u0432\u043d\u0438\u0447\u044c\u044e.
+ttt.display.me = \u042f:
+ttt.display.current = \u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0435\u0435 \u0432\u0440\u0435\u043c\u044f \u0438\u0433\u0440\u0430\u0435\u0442:
+ttt.request.decline = \u0417\u0430\u043f\u0440\u043e\u0441 \u043d\u0430 \u0438\u0433\u0440\u0443 \u0431\u044b\u043b \u043e\u0442\u043a\u043b\u043e\u043d\u0435\u043d.
+ttt.request.accept = \u0418\u0433\u0440\u0430 \u043d\u0430\u0447\u0438\u043d\u0430\u0435\u0442\u0441\u044f.
+ttt.request.sent = \u041e\u0442\u043f\u0440\u0430\u0432\u043a\u0430 \u0437\u0430\u043f\u0440\u043e\u0441\u0430 \u043d\u0430 \u0438\u0433\u0440\u0443...
+
