--- a/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_de.properties
+++ b/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_de.properties
@@ -6,7 +6,7 @@
 ttt.game.request = {0} fordert eine Partie
 ttt.game.name = Tic Tac Toe des Verderbens
 ttt.window.title ={0} gegen {1}
-ttt.win = Glückwunsch, Du hast gewonnen!
+ttt.win = Gl\u00fcckwunsch, Du hast gewonnen!
 ttt.lose = Leider verloren!
 ttt.tie = Unentschieden.
 ttt.display.me = Ich bin:
