--- a/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_pl.properties
+++ b/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_pl.properties
@@ -41,14 +41,14 @@
 ##      Added key: 'guard.settings.title.settings'
 ##
 
-guard.settings.title.list = Strażnik transferu plików
-guard.settings.title.settings = Ustawienia transferu plików
-guard.settings.tooltips.blockedtypes = Wpisz rozszerzenia plików, których przesył chcesz blokować (np. '*.doc'), oddzielając je przecinkami
-guard.settings.tooltips.blockedperson = Wpisz identyfikator JID użytkowników, od których chcesz blokować przesył plików, oddzielając je przecinkami
-guard.settings.tooltips.textarea = Wpisz wiadomość, którą chcesz wysyłać tym którym blokujesz przesyłanie plików. Pozostaw puste jeśli nie chcesz wysyłać im wiadomości.
-guard.settings.title.extensions = Blokowane rozszerzenia plików
-guard.settings.title.person = Zablokowani przesyłający pliki
-guard.settings.title.rejectresponse = Automatyczna odpowiedź odrzucenia
-guard.settings.label.maxsize = Maksymalna wielkość w KB:
+guard.settings.title.list = Stra\u017cnik transferu plik\u00f3w
+guard.settings.title.settings = Ustawienia transferu plik\u00f3w
+guard.settings.tooltips.blockedtypes = Wpisz rozszerzenia plik\u00f3w, kt\u00f3rych przesy\u0142 chcesz blokowa\u0107 (np. '*.doc'), oddzielaj\u0105c je przecinkami
+guard.settings.tooltips.blockedperson = Wpisz identyfikator JID u\u017cytkownik\u00f3w, od kt\u00f3rych chcesz blokowa\u0107 przesy\u0142 plik\u00f3w, oddzielaj\u0105c je przecinkami
+guard.settings.tooltips.textarea = Wpisz wiadomo\u015b\u0107, kt\u00f3r\u0105 chcesz wysy\u0142a\u0107 tym kt\u00f3rym blokujesz przesy\u0142anie plik\u00f3w. Pozostaw puste je\u015bli nie chcesz wysy\u0142a\u0107 im wiadomo\u015bci.
+guard.settings.title.extensions = Blokowane rozszerzenia plik\u00f3w
+guard.settings.title.person = Zablokowani przesy\u0142aj\u0105cy pliki
+guard.settings.title.rejectresponse = Automatyczna odpowied\u017a odrzucenia
+guard.settings.label.maxsize = Maksymalna wielko\u015b\u0107 w KB:
 guard.settings.title.filesize = Rozmiar pliku
-guard.settings.limitcheck = Ograniczenie wielkości pliku
+guard.settings.limitcheck = Ograniczenie wielko\u015bci pliku
