--- a/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_ru_RU.properties
+++ b/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_ru_RU.properties
@@ -42,13 +42,13 @@
 ##
 
 guard.settings.title.list = Transfer Guard
-guard.settings.title.settings = Параметры передачи файлов
-guard.settings.tooltips.blockedtypes = Ведите расширения файлов, которые вы хотите заблокировать (например,'*. doc'), разделенные запятыми
-guard.settings.tooltips.blockedperson = Введите JID пользователей, от которых вы хотите заблокировать передачу файлов (например. 'loser@domain.com'), разделенные запятыми
-guard.settings.tooltips.textarea = Введите сообщение, которое вы хотели бы отправить тем, чьи файлы заблокированы вашими настройками. Оставьте это место пустым, если вы не хотите отправлять им сообщение.
-guard.settings.title.extensions = Заблокированные Расширения Файлов
-guard.settings.title.person = Заблокированные Отправители
-guard.settings.title.rejectresponse = Автоматический Ответ На Отказ
-guard.settings.label.maxsize = Максимальный размер в КБ:
-guard.settings.title.filesize = Размер файла
-guard.settings.limitcheck = Ограничить Размер Файла
+guard.settings.title.settings = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0438 \u0444\u0430\u0439\u043b\u043e\u0432
+guard.settings.tooltips.blockedtypes = \u0412\u0435\u0434\u0438\u0442\u0435 \u0440\u0430\u0441\u0448\u0438\u0440\u0435\u043d\u0438\u044f \u0444\u0430\u0439\u043b\u043e\u0432, \u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c (\u043d\u0430\u043f\u0440\u0438\u043c\u0435\u0440,'*. doc'), \u0440\u0430\u0437\u0434\u0435\u043b\u0435\u043d\u043d\u044b\u0435 \u0437\u0430\u043f\u044f\u0442\u044b\u043c\u0438
+guard.settings.tooltips.blockedperson = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 JID \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439, \u043e\u0442 \u043a\u043e\u0442\u043e\u0440\u044b\u0445 \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0443 \u0444\u0430\u0439\u043b\u043e\u0432 (\u043d\u0430\u043f\u0440\u0438\u043c\u0435\u0440. 'loser@domain.com'), \u0440\u0430\u0437\u0434\u0435\u043b\u0435\u043d\u043d\u044b\u0435 \u0437\u0430\u043f\u044f\u0442\u044b\u043c\u0438
+guard.settings.tooltips.textarea = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435, \u043a\u043e\u0442\u043e\u0440\u043e\u0435 \u0432\u044b \u0445\u043e\u0442\u0435\u043b\u0438 \u0431\u044b \u043e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c \u0442\u0435\u043c, \u0447\u044c\u0438 \u0444\u0430\u0439\u043b\u044b \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u044b \u0432\u0430\u0448\u0438\u043c\u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430\u043c\u0438. \u041e\u0441\u0442\u0430\u0432\u044c\u0442\u0435 \u044d\u0442\u043e \u043c\u0435\u0441\u0442\u043e \u043f\u0443\u0441\u0442\u044b\u043c, \u0435\u0441\u043b\u0438 \u0432\u044b \u043d\u0435 \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0442\u043f\u0440\u0430\u0432\u043b\u044f\u0442\u044c \u0438\u043c \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435.
+guard.settings.title.extensions = \u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0435 \u0420\u0430\u0441\u0448\u0438\u0440\u0435\u043d\u0438\u044f \u0424\u0430\u0439\u043b\u043e\u0432
+guard.settings.title.person = \u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0435 \u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u0435\u043b\u0438
+guard.settings.title.rejectresponse = \u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438\u0439 \u041e\u0442\u0432\u0435\u0442 \u041d\u0430 \u041e\u0442\u043a\u0430\u0437
+guard.settings.label.maxsize = \u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440 \u0432 \u041a\u0411:
+guard.settings.title.filesize = \u0420\u0430\u0437\u043c\u0435\u0440 \u0444\u0430\u0439\u043b\u0430
+guard.settings.limitcheck = \u041e\u0433\u0440\u0430\u043d\u0438\u0447\u0438\u0442\u044c \u0420\u0430\u0437\u043c\u0435\u0440 \u0424\u0430\u0439\u043b\u0430
