--- a/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_lt.properties
+++ b/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_lt.properties
@@ -41,14 +41,14 @@
 ##      Added key: 'guard.settings.title.settings'
 ##
 
-guard.settings.title.list = Persiuntimų apsauga
-guard.settings.title.settings = Bylų persiuntimo nustatymai
-guard.settings.tooltips.blockedtypes = Įveskite bylų išplėtimus, kuriuos norite blokuoti (pvz. '*.doc'), atskiriant kableliais
-guard.settings.tooltips.blockedperson = Įveskite "JID'us" vartotojų iš kurių nenorite gauti bylų persiuntimų (pvz. 'kazkas@domain.com'), atskiriant kableliais
-guard.settings.tooltips.textarea = Įveskite pranešimo tekstą, kuris bus parodytas vartotojams, kurių siuntimus blokuosite. Palikite šį laukelį tuščią, jei nenorite siųsti jiems pranešimo.        
-guard.settings.title.extensions = Blokuojami bylų išplėtimai
-guard.settings.title.person = Blokuojami siuntėjai
-guard.settings.title.rejectresponse = Automatinis siuntimo blokavimo pranešimas
+guard.settings.title.list = Persiuntim\u0173 apsauga
+guard.settings.title.settings = Byl\u0173 persiuntimo nustatymai
+guard.settings.tooltips.blockedtypes = \u012eveskite byl\u0173 i\u0161pl\u0117timus, kuriuos norite blokuoti (pvz. '*.doc'), atskiriant kableliais
+guard.settings.tooltips.blockedperson = \u012eveskite "JID'us" vartotoj\u0173 i\u0161 kuri\u0173 nenorite gauti byl\u0173 persiuntim\u0173 (pvz. 'kazkas@domain.com'), atskiriant kableliais
+guard.settings.tooltips.textarea = \u012eveskite prane\u0161imo tekst\u0105, kuris bus parodytas vartotojams, kuri\u0173 siuntimus blokuosite. Palikite \u0161\u012f laukel\u012f tu\u0161\u010di\u0105, jei nenorite si\u0173sti jiems prane\u0161imo.        
+guard.settings.title.extensions = Blokuojami byl\u0173 i\u0161pl\u0117timai
+guard.settings.title.person = Blokuojami siunt\u0117jai
+guard.settings.title.rejectresponse = Automatinis siuntimo blokavimo prane\u0161imas
 guard.settings.label.maxsize = Maksimalus dydis kilobaitais (KB):
 guard.settings.title.filesize = Bylos dydis
-guard.settings.limitcheck = Apriboti bylos dydį
+guard.settings.limitcheck = Apriboti bylos dyd\u012f
