--- a/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_zh_TW.properties
+++ b/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_zh_TW.properties
@@ -41,14 +41,14 @@
 ##      Added key: 'guard.settings.limitcheck'
 ##      Added key: 'guard.settings.title.settings'
 ##
-guard.settings.title.list = 檔案傳輸設定
-guard.settings.title.settings = 檔案傳輸設定
-guard.settings.tooltips.blockedtypes = 輸入您希望阻擋的檔案維碼 (例如. '*.doc'), 用逗號分隔
-guard.settings.tooltips.blockedperson = 輸入要阻擋從哪位聯絡人的 JID 所傳輸的檔案 (例如. 'loser@domain.com'), 用逗號分隔
-guard.settings.tooltips.textarea = 輸入您想發送給那些被您阻擋的檔案的訊息. 如果您不想發送訊息,下方欄位不需輸入.
-guard.settings.title.extensions = 阻擋檔案維碼
-guard.settings.title.person = 阻擋傳輸者
-guard.settings.title.rejectresponse = 自動回覆阻擋的訊息
-guard.settings.label.maxsize = 檔案大小最大為多少 KB:
-guard.settings.title.filesize = 檔案大小
-guard.settings.limitcheck = 限制檔案大小
+guard.settings.title.list = \u6a94\u6848\u50b3\u8f38\u8a2d\u5b9a
+guard.settings.title.settings = \u6a94\u6848\u50b3\u8f38\u8a2d\u5b9a
+guard.settings.tooltips.blockedtypes = \u8f38\u5165\u60a8\u5e0c\u671b\u963b\u64cb\u7684\u6a94\u6848\u7dad\u78bc (\u4f8b\u5982. '*.doc'), \u7528\u9017\u865f\u5206\u9694
+guard.settings.tooltips.blockedperson = \u8f38\u5165\u8981\u963b\u64cb\u5f9e\u54ea\u4f4d\u806f\u7d61\u4eba\u7684 JID \u6240\u50b3\u8f38\u7684\u6a94\u6848 (\u4f8b\u5982. 'loser@domain.com'), \u7528\u9017\u865f\u5206\u9694
+guard.settings.tooltips.textarea = \u8f38\u5165\u60a8\u60f3\u767c\u9001\u7d66\u90a3\u4e9b\u88ab\u60a8\u963b\u64cb\u7684\u6a94\u6848\u7684\u8a0a\u606f. \u5982\u679c\u60a8\u4e0d\u60f3\u767c\u9001\u8a0a\u606f,\u4e0b\u65b9\u6b04\u4f4d\u4e0d\u9700\u8f38\u5165.
+guard.settings.title.extensions = \u963b\u64cb\u6a94\u6848\u7dad\u78bc
+guard.settings.title.person = \u963b\u64cb\u50b3\u8f38\u8005
+guard.settings.title.rejectresponse = \u81ea\u52d5\u56de\u8986\u963b\u64cb\u7684\u8a0a\u606f
+guard.settings.label.maxsize = \u6a94\u6848\u5927\u5c0f\u6700\u5927\u70ba\u591a\u5c11 KB:
+guard.settings.title.filesize = \u6a94\u6848\u5927\u5c0f
+guard.settings.limitcheck = \u9650\u5236\u6a94\u6848\u5927\u5c0f
