--- a/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_ru_RU.properties
+++ b/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_ru_RU.properties
@@ -1,9 +1,9 @@
 title.spellchecker = Проверка правописания
 
 preference.spellcheckingEnabled = Включить проверку правописания
-preference.autoSpellcheckingEnabled = Включить авто проверку правописания
-preference.language=&Язык
-preference.ignore.uppercasedword=Не различать заглавныйе и строчные
-preference.show.langauage.in.chat.windows=Разрешить выбор языка в окне чата
-dialog.no.mistakes=Нет орфографических ошибок
-button.check.spelling=Проверять правописание
+preference.autoSpellcheckingEnabled = Включить автопроверку правописания
+preference.language = &Язык
+preference.ignore.uppercasedword = Игнорировать заглавные и строчны
+preference.show.langauage.in.chat.windows = Разрешить выбор языка в окне чата
+dialog.no.mistakes = Нет орфографических ошибок
+button.check.spelling = Проверять правописание
