Spellchecker missing letter in translation RU
Spellchecker missing letter in translation RU

--- a/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_ru_RU.properties
+++ b/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_ru_RU.properties
@@ -3,7 +3,7 @@ title.spellchecker = Проверка правописания
 preference.spellcheckingEnabled = Включить проверку правописания
 preference.autoSpellcheckingEnabled = Включить автопроверку правописания
 preference.language = &Язык
-preference.ignore.uppercasedword = Игнорировать заглавные и строчны
+preference.ignore.uppercasedword = Игнорировать заглавные и строчные
 preference.show.langauage.in.chat.windows = Разрешить выбор языка в окне чата
 dialog.no.mistakes = Нет орфографических ошибок
 button.check.spelling = Проверять правописание
