SPARK-2249 Add translation for hours, min to Awaytime
The name of Away time(h,min) is now hardcoded, it would be useful if it changed with the language.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -912,6 +912,13 @@ title.appearance.showVCards = Show &VCards in the contact list
 title.subscription.request = Subscription request
 title.certificate = Certificate
 
+time.days = d
+time.hours = h
+time.minutes = min
+time.seconds = sec
+time.since = since
+time.less.than.one.minute = less than 1 minute
+
 tooltip.place.a.call = Place a call to this individual
 tooltip.appearance = Change the appearance of your conversations
 tooltip.file.transfer = Preferences for file transfer
