--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -912,6 +912,13 @@ title.appearance.showVCards = Показывать VCards в списке кон
 title.subscription.request = Запрос авторизации
 title.certificate = Сертификат
 
+time.days = д
+time.hours = ч
+time.minutes = мин
+time.seconds = с
+time.since = с
+time.less.than.one.minute = меньше 1 минуты
+
 tooltip.place.a.call = Позвонить
 tooltip.appearance = Измените внешний вид ваших разговоров
 tooltip.file.transfer = Настройки передачи файлов
