--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n.properties
@@ -141,6 +141,12 @@ title.search.results = Search Results
 title.chat.transcripts.search = Chat Transcripts Search
 title.number.of.conversations.found = # of conversations found:
 
+time.days = d
+time.hours = h
+time.minutes = min
+time.seconds = sec
+time.since = since
+time.less.than.one.minute = less than 1 minute
 
 tooltip.allow.cobrowsing = Allows current visitor to follow your browser navigation.
 tooltip.hide.cobrowsing = Hides your browser navigation from the current visitor.
