SPARK-2116 Add an option to set how many previous messages should be shown in a chat window
Add GUI for this PR - https://github.com/igniterealtime/Spark/pull/475

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -234,6 +234,7 @@ label.cancel = Cancel
 label.cell = Cell
 label.change.password.to = Change &password to
 label.chatroom.fontsize = Chat room &font size:
+label.chatroom.maxcurrenthistorysize = Max current history size:
 label.city = City
 label.close = Close
 label.company = Company
