Add translation for all Language

--- a/core/src/main/resources/i18n/spark_i18n_de.properties
+++ b/core/src/main/resources/i18n/spark_i18n_de.properties
@@ -205,6 +205,7 @@ label.avatar = Avatar:
 label.cancel = Abbrechen
 label.change.password.to = &Neues Passwort eingeben
 label.chatroom.fontsize = &Chatraum-Schriftgröße:
+label.chatroom.maxcurrenthistorysize = Maximale Größe des aktuellen Verlaufs:
 label.city = Sta&dt
 label.close = &Schließen
 label.company = &Firma
