--- a/core/src/main/resources/i18n/spark_i18n_fi.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fi.properties
@@ -194,6 +194,7 @@ label.add.jid = &Lisää JID
 label.add.task = Lisää tehtävä
 label.due = Erääntyvä
 label.chatroom.fontsize = Keskusteluhuoneen &kirjasinkoko:
+label.chatroom.maxcurrenthistorysize = Nykyisen historian enimmäiskoko:
 label.contactlist.fontsize = Yhteystietojen &kirjasinkoko:
 label.contactlist.avatarsize = Yhteystietojen kuvien koko:
 label.message = &Viesti
