--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -211,6 +211,7 @@ label.cancel = Annuler
 label.cell = Cell
 label.change.password.to = &Changer le mot de passe
 label.chatroom.fontsize = Taille de la &police de la fenêtre de discussion:
+label.chatroom.maxcurrenthistorysize = Taille maximale de l'historique actuel:
 label.choose.file = Choisissez un fichier
 label.city = &Ville
 label.close = F&ermer
