--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -205,6 +205,7 @@ label.cancel = Annulla
 label.cell = Cellulare
 label.change.password.to = &Cambia Password
 label.chatroom.fontsize = Dimensione font finestra chat:
+label.chatroom.maxcurrenthistorysize = Dimensione massima della cronologia corrente:
 label.city = &Località
 label.close = C&hiudi
 label.company = &Azienda
