--- a/core/src/main/resources/i18n/spark_i18n_ko.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ko.properties
@@ -188,6 +188,7 @@ label.available.users.in.roster =   가능한 친구들
 label.cancel = 취소
 label.change.password.to = 새 비밀번호
 label.chatroom.fontsize = 대화창 폰트 크기:
+label.chatroom.maxcurrenthistorysize = 최대 현재 기록 크기:
 label.city = 도시
 label.close = 닫기
 label.company = 회사
