--- a/core/src/main/resources/i18n/spark_i18n_ky.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ky.properties
@@ -157,6 +157,7 @@ label.cancel= Айнуу
 label.cell=Cell
 label.change.password.to= &Сырсөздү алмаштыруу
 label.chatroom.fontsize=Чат &бөлмөнүн фонт өлчөмү:
+label.chatroom.maxcurrenthistorysize =Учурдагы тарыхтын максималдуу өлчөмү:
 label.choose.file=Файлды тандаңыз
 label.city= &Шаар
 label.close=&Жабуу
