--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -232,6 +232,7 @@ label.broadcast.history.search.date = Paieškos data (metai-mėn):
 label.cancel = Atšaukti
 label.change.password.to = Įr&ašykite naują slaptažodį
 label.chatroom.fontsize = Pokalbių kambario šriftas:
+label.chatroom.maxcurrenthistorysize = Maksimalus dabartinės istorijos dydis:
 label.city = &Miestas
 label.close = &Užverti
 label.company = &Organizacija
