--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -169,6 +169,7 @@ label.available.users.in.roster = &Beschikbare gebruikers in contactlijst
 label.cancel = Annuleer
 label.change.password.to = &Verander wachtwoord
 label.chatroom.fontsize = Chat &Ruimte lettergrootte:
+label.chatroom.maxcurrenthistorysize = Max huidige geschiedenis grootte:
 label.city = P&laats
 label.close = S&luiten
 label.company = &Bedrijf
