--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -231,6 +231,7 @@ label.avatar = Awatar:
 label.cancel = Anuluj
 label.change.password.to = Zmień hasło na
 label.chatroom.fontsize = Rozmiar czcionki w pokoju rozmów
+label.chatroom.maxcurrenthistorysize = Maksymalny rozmiar bieżącej historii:
 label.city = Miasto
 label.close = Zamknij
 label.company = Firma
