--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -122,6 +122,7 @@ checkbox.use.system.look.and.feel = Usar gráficos do sistema (Necessário reini
 
 label.change.password.to = &Trocar senha para
 label.chatroom.fontsize = Tamanho da fonte no Chat:
+label.chatroom.maxcurrenthistorysize = Tamanho máximo do histórico atual:
 label.username = &Usuário
 label.name = &Nome
 label.room.name = &Nome da sala
