--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -234,6 +234,7 @@ label.cancel = Отмена
 label.cell = Мобильный
 label.change.password.to = Сменить пароль на
 label.chatroom.fontsize = Размер шрифта в чате:
+label.chatroom.maxcurrenthistorysize = Максимальный размер текущей истории:
 label.city = Город
 label.close = Закрыть
 label.company = Компания
