--- a/core/src/main/resources/i18n/spark_i18n_tr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_tr.properties
@@ -178,6 +178,7 @@ label.available.users.in.roster =   &Listemdeki kullanıcılar
 label.cancel = İptal
 label.change.password.to = &Yeni Parolayı girin
 label.chatroom.fontsize = Sohbet odası &yazıtipi boyutu:
+label.chatroom.maxcurrenthistorysize = Maksimum geçerli geçmiş boyutu:
 label.city = &Şehir
 label.close = &Kapat
 label.company = &Kuruluş
