--- a/core/src/main/resources/i18n/spark_i18n_uk_UA.properties
+++ b/core/src/main/resources/i18n/spark_i18n_uk_UA.properties
@@ -383,6 +383,7 @@ label.certificate.subject.unique.id                = Унікальний іде
 label.certificate.version                          = Версія
 label.change.password.to                           = Змінити пароль на
 label.chatroom.fontsize                            = Розмір шрифта в кімнаті
+label.chatroom.maxcurrenthistorysize               = Максимальний розмір поточної історії:
 label.choose.file                                  = Вибрати файл
 label.city                                         = Місто
 label.close                                        = Закрити
