--- a/core/src/main/resources/i18n/spark_i18n_zh_CN.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_CN.properties
@@ -198,6 +198,7 @@ label.avatar = 头像:
 label.cancel = 取消
 label.change.password.to = (&C) 改变密码
 label.chatroom.fontsize = (&R)聊天室字体:
+label.chatroom.maxcurrenthistorysize = 最大当前历史记录大小:
 label.city = (&C) 城市
 label.close = (&L) 关闭
 label.company = (&C) 公司
