--- a/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
@@ -283,6 +283,7 @@ label.passwordreset = 重設密碼
 label.add.task = 新增任務
 label.avatar = 頭像圖片:
 label.chatroom.fontsize = 聊天室字體大小:
+label.chatroom.maxcurrenthistorysize = 最大當前歷史記錄大小:
 label.recent.conversation = 最近的對話
 label.frequent.contacts = 常用聯絡人
 label.contactlist.avatarsize = 聯絡人列表頭像圖片大小:
