SPARK-1992 Fix the View logs menu
Now the error log window is working

--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -89,7 +89,7 @@ button.cancel = Отмена
 button.cert.info = Подробнее
 button.clear = Очистить
 button.close = Закрыть
-button.copy.to.clipboard=Скопировать в бувер обмена
+button.copy.to.clipboard=Скопировать в буфер обмена
 button.create.account = Создать учетную запись
 button.create.room = Создать или войти в комнату
 button.decline = Отклонить
@@ -804,7 +804,7 @@ title.choose.directory = Выберите каталог
 title.choose.incoming.sound = Выберете звук входящего звонка
 title.choose.offline.sound = Выберете звук «Отключен»
 title.choose.outgoing.sound = Выберете звук исходящего звонка
-title.client.logs = Журналы клиента
+title.client.logs = Клиентский журнал
 title.conference.invitation = Приглашение в конференцию
 title.conference.rooms = Комнаты конференций
 title.configure.chat.room = Настройки комнаты
