Add an option to ask for confirmation when closing conversation window with unread chats

--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -195,6 +195,7 @@ checkbox.allow.soft.fail = Разрешить политику soft fail
 checkbox.on.exception.list = В списке исключений
 checkbox.filetransfer.ibb.only = Только In-Band Bytestreams
 checkbox.filetransfer.autoaccept.presence = Автоматически принимать передачу файлов от известных контактов
+checkbox.close.unread.message = Спрашивать при закрытии окна если есть непрочитанные сообщения
 radio.encryptionmode.required = Требуется
 radio.encryptionmode.ifpossible = Если возможно
 radio.encryptionmode.disabled = Выключить
@@ -502,6 +503,7 @@ message.client.information = Информация о клиенте для {0}
 message.close.other.chats = Закрыть все другие чаты
 message.close.stale.chats = Закрыть устаревшие чаты
 message.close.this.chat = Закрыть чат
+message.close.unread.window = Вы имеете непрочитанные сообщения, вы точно хотите закрыть окно?
 message.conference.info.error = Невозможно получить информацию о конференции. Попробуйте позже.
 message.conference.service.error = Сервис не найден.
 message.confirm.destruction.of.room = Уничтожение комнаты выгонит всех пользователей из этой комнаты. Продолжить?
