--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -195,6 +195,7 @@ checkbox.allow.soft.fail = Allow soft fail policy
 checkbox.on.exception.list = On the exception list
 checkbox.filetransfer.ibb.only = In-Band Bytestreams Only
 checkbox.filetransfer.autoaccept.presence = Automatically accept file transfers from known contacts
+checkbox.close.unread.message = Ask when closing the window if there are unread messages
 radio.encryptionmode.required = Required
 radio.encryptionmode.ifpossible = If possible
 radio.encryptionmode.disabled = Disabled
@@ -502,6 +503,7 @@ message.client.information = Client information for {0}
 message.close.other.chats = Close all other chats
 message.close.stale.chats = Close stale chats
 message.close.this.chat = Close this chat
+message.close.unread.window = You have unread messages, are you sure you want to close the window?
 message.conference.info.error = Unable to retrieve conference information, please try back later
 message.conference.service.error = Unable to locate the conference service
 message.confirm.destruction.of.room = Destroying the room removes all users from the room, continue?
