--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -503,7 +503,7 @@ message.client.information = Информация о клиенте для {0}
 message.close.other.chats = Закрыть все другие чаты
 message.close.stale.chats = Закрыть устаревшие чаты
 message.close.this.chat = Закрыть чат
-message.close.unread.window = Вы имеете непрочитанные сообщения, вы точно хотите закрыть окно?
+message.close.unread.window = У вас есть непрачитанные сообщения, вы точно хотите закрыть окно?
 message.conference.info.error = Невозможно получить информацию о конференции. Попробуйте позже.
 message.conference.service.error = Сервис не найден.
 message.confirm.destruction.of.room = Уничтожение комнаты выгонит всех пользователей из этой комнаты. Продолжить?
